--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -24,9 +24,8 @@
             <p>{% trans "Please fill in the form to create an account." %}</p>
           </div>
 
-          <div class="text-center mb-4">
+          <!-- <div class="text-center mb-4">
             <p class="small">{% trans "Sign up with" %}:</p>
-            <!-- Google Sign-up Button -->
             <a
               href="{% provider_login_url 'google' %}"
               class="btn btn-outline-light btn-lg w-100 mt-2"
@@ -34,7 +33,6 @@
               <i class="fab fa-google me-2"></i>
               {% trans "Sign up with Google" %}
             </a>
-            <!-- GitHub Sign-up Button -->
             <a
               href="{% provider_login_url 'github' %}"
               class="btn btn-outline-light btn-lg w-100 mt-2"
@@ -42,10 +40,10 @@
               <i class="fab fa-github me-2"></i>
               {% trans "Sign up with GitHub" %}
             </a>
-          </div>
+          </div> -->
 
           <div class="text-center mb-4">
-            <p>{% trans "or sign up with your email" %}</p>
+            <p>{% trans "sign up with your email" %}</p>
           </div>
 
           <form
